# Trend-Seeker-Agent

./: README.md  pyproject.toml
src/trendseeker_agent/: .env  __init__.py  trendseeker-agent.py
src/trendseeker_agent/.chainlit/: config.toml
