[project]
name = "trendseeker-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hoorain Mahtab", email = "nasreen888811@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.1.0",
]

[project.scripts]
trendseeker-agent = "trendseeker_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
